# voice-input-tool

./: .gitignore  CLAUDE.md  README.md  SPEC.md  VoiceInput.spec  pyproject.toml  setup.py
docs/: dependency-version-report.md  transcription-performance-analysis.md
src/voice_input/: __init__.py  app.py  config.py  hotkey.py  logger.py  main.py  output.py  recorder.py  transcriber.py
