[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-input-tool"
version = "0.1.0"
description = "Voice input tool using OpenAI Whisper API"
requires-python = ">=3.13"
dependencies = [
    "sounddevice>=0.5.0",
    "scipy>=1.15.0",
    "numpy>=2.0.0",
    "openai>=2.0.0",
    "pyperclip>=1.9.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.0",
    "rumps>=0.4.0",
    "pynput>=1.7.6",
]

[project.scripts]
voice-input = "voice_input.main:main"
voice-input-app = "voice_input.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_input"]
